--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,6 +3,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background: white;
 
     padding: 2rem 2rem;
 
@@ -11,7 +12,6 @@
     
     border-bottom-left-radius: 30px;
     border-bottom-right-radius: 30px;
-
 }
 
 .app__navbar-links {
@@ -31,4 +31,69 @@
 
 .app__navbar-links li:hover {
     color: var(--color-grey);
+}
+
+.app__navbar-smallscreen {
+    display: none;
+}
+
+.app__navbar-smallscreen_overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background: white;
+    transition: .5s ease;
+
+    flex-direction: column;
+    z-index: 5;
+}
+
+.app__navbar-smallscreen_overlay .overlay__close {
+    font-size: 27px;
+    color: black;
+    cursor: pointer;
+
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
+
+.app__navbar-smallscreen_links {
+    list-style: none;
+}
+
+.app__navbar-smallscreen_links li {
+    margin: 2rem;
+    cursor: pointer;
+    text-align: center;
+
+    font-family: var(--font-base);
+    color: black;
+    font-weight: 500;
+    letter-spacing: 0.1em;
+    line-height: 29.9px;
+    font-size: 35px;
+}
+
+.app__navbar-smallscreen_links li:hover {
+    color: black;
+}
+
+
+@media screen and (max-width: 1150px) {
+    .app__navbar-links {
+        display: none;
+    }
+
+    .app__navbar-smallscreen {
+        display: flex;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .app__navbar {
+        padding: 1rem;
+    }
 }
