--- a/src/container/Projects/Projects.css
+++ b/src/container/Projects/Projects.css
@@ -36,7 +36,6 @@
 
 .centerBoxes {
   display: flex;
-  width: 100%;
   background: #f5f7fa;
   background-image: linear-gradient(to top, #f5f7fa 0%, #c3cfe2 100%);
   border-radius: 50px;
@@ -44,6 +43,10 @@
   border-width: 5px;
   border-style: solid;
   margin-bottom: 50px;
+
+  align-items: center;
+  align-content: space-between;
+  
 }
 
 .centerBoxes:hover {
@@ -75,7 +78,9 @@
 }
 
 .contentBox {
-  margin: 125px;
+  margin-left: 75px;
+  margin-top: 75px;
+  margin-bottom: 75px;
 }
 
 .images__projects {
@@ -83,10 +88,36 @@
   height: 500px;
   object-fit: cover;
   border-radius: 40px;
-  margin: 50px;
-  margin-right: 125px;
 
   border-color: #f5f7fa;
   border-style: solid;
   border-width: 5px;
+  margin: 30px;
+}
+
+@media screen and (min-width: 2000px) {
+  .app__projects-h1 {
+      font-size: 180px;
+  }
+}
+
+@media screen and (max-width: 1275px) {
+    .images__projects {
+      display: none;
+  }
+
+}
+
+@media screen and (max-width: 650px) {
+
+  .images__projects {
+      display: none;
+  }
+}
+
+@media screen and (max-width: 450px) {
+
+  .images__projects {
+      display: none;
+  }
 }
