--- a/src/container/Experience/Experience.css
+++ b/src/container/Experience/Experience.css
@@ -7,10 +7,10 @@
 
 .app__experience-h1 {
     font-family: var(--font-base);
-
-    line-height: 117px;
+    line-height: 125%;
     font-size: 50px;
 }
+
 
 .app__experience-h2 {
     font-family: var(--font-base);
@@ -33,6 +33,8 @@
   font-weight: 400;
   letter-spacing: 0.04em;
   font-size: 16px;
+  margin-top: 30px;
+  margin-right: 30px;
 }
 
 .images__experience {
@@ -40,18 +42,51 @@
   height: 500px;
   object-fit: cover;
   border-radius: 40px;
-  margin-top: 100px;
-  margin-right: 125px;
+  margin: 30px;
+
 
   border-color: #f5f7fa;
   border-style: solid;
   border-width: 5px;
 }
 
-.contentBoxExperience {
-  margin-right: 125px;
-  margin-left: 125px;
-  margin-top: 100px;
-  margin-bottom: 100px;
+
+
+@media screen and (min-width: 2000px) {
+
 }
 
+@media screen and (max-width: 1475px) {
+
+    .images__experience {
+      display: none;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .images__projects {
+    display: none;
+  }
+  .contentBox {
+    margin:25px;
+  }
+  .app__experience-h1 {
+    font-size: 30px;
+  }
+  .app__experience-p {
+    width: 65vw;
+  }
+  .app__projects-h1-box{
+    width: 60vw;
+  }
+}
+
+@media screen and (max-width: 450px) {
+    .app__experience-h1 {
+        font-size: 50px;
+        line-height: 70px;
+    }
+    .images__experience {
+        display: none;
+    }
+}
